# Helper

./: CMakeLists.txt  README.md  assemblywidget.cpp  assemblywidget.h  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  procmemreaderwidget.cpp  procmemreaderwidget.h
batcapstone/: CMakeLists.txt
keystone/: CMakeLists.txt
keystone/llvm/: CMakeLists.txt
keystone/llvm/include/llvm/ADT/: STLExtras.h
platform/: CMakeLists.txt
platform/include/mac/: requestRootAuthorization.h
platform/mac/: CMakeLists.txt  requestRootAuthorization.c
